--- a/gestion_doc/document_management/templates/base.html
+++ b/gestion_doc/document_management/templates/base.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/main.js' %}" defer></script>
+    {% block extra_css %}{% endblock %}
     <style>
         body {
             display: flex;
