--- a/gestion_doc/document_management/templates/delegations/form.html
+++ b/gestion_doc/document_management/templates/delegations/form.html
@@ -1,15 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{% if structure %}Modifier{% else %}Ajouter{% endif %} une Structure</h2>
+<h2>{% if delegation %}Modifier{% else %}Ajouter{% endif %} une Délégation</h2>
+
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
-      <label>Nom:</label>
+    <label>Nom:</label>
     <input type="text" name="nom_delegation" value="{{ delegation.nom_delegation|default_if_none:'' }}" required><br>
  
-    <label>localisation:</label>
-    <input type="text" name="localisation" value="{{ delegation.localisation|default_if_none:'' }}" required>
+    <label>Localisation:</label>
+    <input type="text" name="localisation" value="{{ delegation.localisation|default_if_none:'' }}" required><br>
+
     <label>Description:</label>
-    <textarea name="description" value="{{ delegation.description|default_if_none:'' }}" required></textarea>
+    <textarea name="description" required>{{ delegation.description|default_if_none:'' }}</textarea><br>
+
     <button type="submit">Enregistrer</button>
 </form>
 {% endblock %}
