--- a/gestion_doc/document_management/templates/structures/form.html
+++ b/gestion_doc/document_management/templates/structures/form.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>{% if structure %}Modifier{% else %}Ajouter{% endif %} une Structure</h2>
+
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
     <label for="nom">Nom :</label>
