Refactor docker-compose setup, adding nginx and watchtower services, and updating volume configurations. Enhanced permission management in views and templates, including filtering options and conditional rendering based on user permissions. Updated context processors and models to support new permission actions.

--- a/gestion_doc/document_management/templates/categoriedocuments/detail.html
+++ b/gestion_doc/document_management/templates/categoriedocuments/detail.html
@@ -36,8 +36,13 @@
             </div>
 
             <div class="d-flex justify-content-end">
-                <a href="{% url 'update_categorieDocument' categorieDocument.id %}" class="btn btn-outline-primary me-2">✏️ Modifier</a>
-                <a href="{% url 'delete_categorieDocument' categorieDocument.id %}" class="btn btn-outline-danger">🗑️ Supprimer</a>
+                
+                {% if can_update_categories %}
+                <a href="{% url 'update_categorieDocument' categorie.id %}" class="btn btn-secondary btn-sm">✏️ Modifier</a>
+                {% endif %}
+                {% if can_delete_categories %}
+                <a href="{% url 'delete_categorieDocument' categorie.id %}" class="btn btn-danger btn-sm">🗑️ Supprimer</a>
+                {% endif %}
             </div>
         </div>
     </div>
