--- a/gestion_doc/document_management/templates/agents/detail.html
+++ b/gestion_doc/document_management/templates/agents/detail.html
@@ -77,8 +77,13 @@
                     </div>
 
                     <div class="mt-4 d-flex flex-wrap gap-2">
-                        <a href="{% url 'update_agent' agent.id %}" class="btn btn-outline-primary">✏️ Modifier</a>
-                        <a href="{% url 'delete_agent' agent.id %}" class="btn btn-outline-danger">🗑️ Supprimer</a>
+                     
+                        {% if can_update_agents %}
+                        <a href="{% url 'update_agent' agent.id %}" class="btn btn-secondary btn-sm">✏️ Modifier</a>
+                        {% endif %}
+                        {% if can_delete_agents %}
+                        <a href="{% url 'delete_agent' agent.id %}" class="btn btn-danger btn-sm">🗑️ Supprimer</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
