--- a/gestion_doc/document_management/templates/base.html
+++ b/gestion_doc/document_management/templates/base.html
@@ -22,9 +22,8 @@
         }
 
         .navbar-custom .navbar-brand,
-        .navbar-custom .nav-link,
-        .navbar-custom .dropdown-item {
-            color: white !important;
+        .navbar-custom .nav-link {
+            color: white;
         }
 
         .main-container {
@@ -69,7 +68,15 @@
         .dropdown-menu {
             min-width: 200px;
         }
-
+        .dropdown-item{
+            display: flex;
+            align-items: center;
+            color: #333;
+        }
+        .dropdown-item i,
+        .dropdown-item a {
+            color: #333 !important;
+        }
         .user-info {
             padding: 0.5rem 1rem;
             border-bottom: 1px solid #dee2e6;
