--- a/gestion_doc/document_management/templates/delegations/detail.html
+++ b/gestion_doc/document_management/templates/delegations/detail.html
@@ -26,8 +26,12 @@
             </div>
 
             <div class="d-flex justify-content-end">
-                <a href="{% url 'update_delegation' delegation.id %}" class="btn btn-outline-primary me-2">✏️ Modifier</a>
-                <a href="{% url 'delete_delegation' delegation.id %}" class="btn btn-outline-danger">🗑️ Supprimer</a>
+                {% if can_update_delegations %}
+                <a href="{% url 'update_delegation' delegation.id %}" class="btn btn-secondary btn-sm">✏️ Modifier</a>
+                {% endif %}
+                {% if can_delete_delegations %}
+                <a href="{% url 'delete_delegation' delegation.id %}" class="btn btn-danger btn-sm">🗑️ Supprimer</a>
+                {% endif %}
             </div>
         </div>
     </div>
